# CaramOS-app-center

./: CMakeLists.txt  Makefile  README.md
data/: apps.json
data/apps/: ardour.json  arduino.json  audacity.json  baobab.json  bitwarden.json  bleachbit.json  blender.json  brave.json  calibre.json  cheese.json  chromium.json  clementine.json  code.json  copyq.json  darktable.json  dbeaver.json  discord.json  docker.json  dropbox.json  evince.json  filemanager-gnome.json  filezilla.json  firefox.json  flameshot.json  font-manager.json  freecad.json  geany.json  gimp.json  gitkraken.json  gnome-tweaks.json  gnucash.json  gparted.json  gufw.json  guvcview.json  handbrake.json  htop.json  inkscape.json  intellij.json  joplin.json  kdenlive.json  (+52 more)
data/scripts/: firefox.aepkg  neovim.aepkg  obs-studio.aepkg  vlc.aepkg
data/themes/: catppuccin-mocha.cfg  classic-ivory.cfg  forest-dark.cfg  nord-frost.cfg
docs/: PACKAGE_SCRIPT_STANDARD.md
include/: app_loader.h  installer.h  main_window.h  package_manager.hpp  theme_config.hpp  theme_manager.h  types.h  ui_widgets.hpp
scripts/: TEMPLATE.sh  install-audacity.sh  install-blender.sh  install-firefox.sh  install-generic.sh  install-gimp.sh  install-inkscape.sh  install-kdenlive.sh  install-libreoffice.sh  install-nautilus.sh  install-obs.sh  install-onlyoffice.sh  install-thunderbird.sh  install-vlc.sh  install-vscode.sh  install-wps-office.sh  install-zalounoffical.sh
scripts/apps/: docker.sh  firefox.sh  gimp.sh  htop.sh  libreoffice.sh  vlc.sh  vscode.sh
src/: app_loader.cpp  installer.cpp  main.cpp  main_window.cpp  package_manager.cpp  theme_config.cpp  theme_manager.cpp  ui_widgets.cpp
